[package]
name = "axelar-solana-gateway"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true


[lib]
name = "axelar_solana_gateway"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []
devnet-amplifier = [
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "program-utils/devnet-amplifier",
]
stagenet = [
    "axelar-solana-gateway-test-fixtures/stagenet",
    "program-utils/stagenet",
]
testnet = [
    "axelar-solana-gateway-test-fixtures/testnet",
    "program-utils/testnet",
]
mainnet = [
    "axelar-solana-gateway-test-fixtures/mainnet",
    "program-utils/mainnet",
]
default = ["devnet-amplifier"]

[dependencies]
anchor-discriminators-macros.workspace = true
anchor-discriminators.workspace = true
axelar-message-primitives.workspace = true
axelar-solana-encoding = { workspace = true, features = ["solana"] }
bincode.workspace = true
bitvec.workspace = true
borsh.workspace = true
bytemuck.workspace = true
ed25519-dalek.workspace = true
event-utils.workspace = true
hex.workspace = true
itertools.workspace = true
libsecp256k1.workspace = true
num-derive.workspace = true
num-traits.workspace = true
program-utils.workspace = true
role-management.workspace = true
solana-program.workspace = true
thiserror.workspace = true
alloy-sol-types.workspace = true
event-cpi.workspace = true
event-cpi-macros.workspace = true

[dev-dependencies]
event-cpi-test-utils.workspace = true
hex.workspace = true
lazy_static.workspace = true
sha3.workspace = true
solana-client.workspace = true
solana-logger.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
rand.workspace = true
typed-builder.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
evm-contracts-rs.workspace = true
evm-contracts-test-suite.workspace = true
test-log.workspace = true
tokio.workspace = true
