[package]
name = "axelar-solana-governance"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "axelar_solana_governance"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []
devnet-amplifier = [
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "axelar-solana-gateway/devnet-amplifier",
    "axelar-solana-memo-program/devnet-amplifier",
    "program-utils/devnet-amplifier"
]
stagenet = [
    "axelar-solana-gateway-test-fixtures/stagenet",
    "axelar-solana-gateway/stagenet",
    "axelar-solana-memo-program/stagenet",
    "program-utils/stagenet"
]
testnet = [
    "axelar-solana-gateway-test-fixtures/testnet",
    "axelar-solana-gateway/testnet",
    "axelar-solana-memo-program/testnet",
    "program-utils/testnet"
]
mainnet = [
    "axelar-solana-gateway-test-fixtures/mainnet",
    "axelar-solana-gateway/mainnet",
    "axelar-solana-memo-program/mainnet",
    "program-utils/mainnet"
]
default = ["devnet-amplifier"]

[dependencies]
anchor-discriminators.workspace = true
anchor-discriminators-macros.workspace = true
event-cpi-macros.workspace = true
event-cpi.workspace = true
solana-program.workspace = true
program-utils = { workspace = true, default-features = false }
governance-gmp.workspace = true
borsh.workspace = true
axelar-solana-encoding.workspace = true
alloy-sol-types.workspace = true
axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"] }
role-management.workspace = true

[dev-dependencies]
anyhow.workspace = true
event-cpi-test-utils.workspace = true
solana-logger.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
ethers.workspace = true
alloy-primitives.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
axelar-solana-memo-program = { workspace = true, features = ["no-entrypoint"] }
dummy-axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde.workspace = true
