[package]
name = "axelar-solana-its"
version = "0.1.0"
edition = "2021"

[lib]
name = "axelar_solana_its"
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
no-entrypoint = []
test-sbf = []
devnet-amplifier = [
    "axelar-solana-gas-service/devnet-amplifier",
    "axelar-solana-gateway-test-fixtures/devnet-amplifier",
    "axelar-solana-gateway/devnet-amplifier",
    "axelar-solana-memo-program/devnet-amplifier",
    "program-utils/devnet-amplifier"
]
stagenet = [
    "axelar-solana-gas-service/stagenet",
    "axelar-solana-gateway-test-fixtures/stagenet",
    "axelar-solana-gateway/stagenet",
    "axelar-solana-memo-program/stagenet",
    "program-utils/stagenet"
]
testnet = [
    "axelar-solana-gas-service/testnet",
    "axelar-solana-gateway-test-fixtures/testnet",
    "axelar-solana-gateway/testnet",
    "axelar-solana-memo-program/testnet",
    "program-utils/testnet"
]
mainnet = [
    "axelar-solana-gas-service/mainnet",
    "axelar-solana-gateway-test-fixtures/mainnet",
    "axelar-solana-gateway/mainnet",
    "axelar-solana-memo-program/mainnet",
    "program-utils/mainnet"
]
default = ["devnet-amplifier"]

[dependencies]
anchor-discriminators.workspace = true
anchor-discriminators-macros.workspace = true
alloy-primitives.workspace = true
axelar-message-primitives.workspace = true
axelar-solana-encoding.workspace = true
axelar-solana-gas-service = { workspace = true, features = ["no-entrypoint"] }
axelar-solana-gateway = { workspace = true, features = ["no-entrypoint"] }
bitflags.workspace = true
borsh.workspace = true
interchain-token-transfer-gmp.workspace = true
itertools.workspace = true
mpl-token-metadata.workspace = true
program-utils = { workspace = true, default-features = false }
role-management.workspace = true
solana-program.workspace = true
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint", "serde-traits"] }
spl-token-metadata-interface.workspace = true
typed-builder.workspace = true
event-utils.workspace = true

[dev-dependencies]
anyhow.workspace = true
axelar-solana-gateway-test-fixtures.workspace = true
axelar-solana-memo-program = { workspace = true, features = ["no-entrypoint"] }
evm-contracts-test-suite.workspace = true
rstest.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
test-context.workspace = true
