[package]
name = "dummy-axelar-solana-event-cpi"
version = "0.1.0"
description = "Utility program to test Event CPI functionality"
edition = "2021"

[lib]
name = "dummy_axelar_solana_event_cpi"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
devnet-amplifier = [
    "program-utils/devnet-amplifier"
]
stagenet = [
    "program-utils/stagenet"
]
testnet = [
    "program-utils/testnet"
]
mainnet = [
    "program-utils/mainnet"
]
default = ["devnet-amplifier"]

[[example]]
name = "emit_memo"

[dependencies]
anchor-discriminators.workspace = true
borsh.workspace = true
program-utils = { workspace = true, default-features = false }
solana-program.workspace = true
event-cpi.workspace = true
event-cpi-macros.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
solana-transaction-status.workspace = true
solana-cli-config = "~2.1"
pretty_assertions.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
bs58.workspace = true
