[package]
name = "dummy-axelar-solana-gateway"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "dummy_axelar_solana_gateway"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program.workspace = true
borsh.workspace = true

[dev-dependencies]
