[package]
name = "dummy-axelar-solana-gateway"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "dummy_axelar_solana_gateway"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []
devnet-amplifier = ["program-utils/devnet-amplifier"]
stagenet = ["program-utils/stagenet"]
testnet = ["program-utils/testnet"]
mainnet = ["program-utils/mainnet"]
default = ["devnet-amplifier"]

[dependencies]
anchor-discriminators.workspace = true
anchor-discriminators-macros.workspace = true
solana-program.workspace = true
borsh.workspace = true
program-utils = { workspace = true, default-features = false }

[dev-dependencies]
