[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
axelar-solana-gateway = { git = "https://github.com/eigerco/solana-axelar.git", rev = "1c97f24", features = [
    "no-entrypoint",
] }
axelar-solana-gas-service = { git = "https://github.com/eigerco/solana-axelar.git", rev = "1c97f24", features = [
    "no-entrypoint",
] }
axelar-solana-governance = { git = "https://github.com/eigerco/solana-axelar.git", rev = "1c97f24", features = [
    "no-entrypoint",
] }
axelar-solana-its = { git = "https://github.com/eigerco/solana-axelar.git", rev = "1c97f24", features = [
    "no-entrypoint"
] }
axelar-solana-encoding = { git = "https://github.com/eigerco/solana-axelar.git", rev = "1c97f24" }
axelar-executable = { git = "https://github.com/eigerco/solana-axelar.git", rev = "1c97f24" }
governance-gmp = { git = "https://github.com/eigerco/solana-axelar.git", rev = "1c97f24" }
program-utils = { git = "https://github.com/eigerco/solana-axelar.git", rev = "1c97f24" }

axelar-wasm-std = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "3f036ec" }
voting-verifier = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "3f036ec", features = [
    "library",
] }
multisig-prover = { git = "https://github.com/eigerco/axelar-amplifier.git", rev = "3f036ec", features = [
    "library",
] }

alloy-sol-types = "0.7.6"
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
borsh = "1.5.1"
bs58 = "0.5.1"
clap = { version = "3.2", features = ["derive", "env"] }
cosmrs = { version = "0.16", features = ["cosmwasm", "rpc", "grpc"] }
cosmwasm-schema = "2"
cosmwasm-std = "1.5"
eyre = "0.6.12"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib"] }
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
solana-clap-v3-utils = "2.2.7" 
solana-cli-config = "2.2.7"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
base64 = "0.22.1"
