[package]
name = "xtask-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
common = { path = "../common"}
env_logger.workspace = true
gateway = { path = "../programs/gateway", features = ["no-entrypoint"] }
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
tokio.workspace = true
