[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[lints.clippy]
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }

[lints.rust]
unused_imports = "warn"
rust_2018_idioms = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_must_use = "deny"

[dependencies]
eyre = "0.6"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xshell.workspace = true
solana-sdk.workspace = true
gmp-gateway = { path = "./../programs/gateway" }
axelar-message-primitives = { path = "./../helpers/axelar-message-primitives" }
solana-client = "2.0.1"
url = "2"
toml = "0.8"
serde.workspace = true
ethers.workspace = true
evm-contracts-test-suite.workspace = true
axelar-solana-memo-program.workspace = true
solana-cli-config = "2.0.1"
reqwest.workspace = true
futures.workspace = true
flate2 = "1.0"
tar = "0.4"
const_format = { version = "0.2", features = ["fmt"] }
cosmrs = { version = "0.16", features = ["cosmwasm", "rpc", "grpc"] }
k256 = "0.13"
hex.workspace = true
base64.workspace = true
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
serde_json.workspace = true
cosmwasm-schema.workspace = true
bip39 = { version = "2", features = ["rand"] }
voting-verifier = { path = "../../axelar-amplifier/contracts/voting-verifier", features = ["library"] }
gateway = { path = "../../axelar-amplifier/contracts/gateway", features = ["library"] }
multisig = { path = "../../axelar-amplifier/contracts/multisig", features = ["library"] }
axelar-wasm-std = { path = "../../axelar-amplifier/packages/axelar-wasm-std", features = ["library"] }
gateway-api = { path = "../../axelar-amplifier/packages/gateway-api" }
router-api = { path = "../../axelar-amplifier/packages/router-api" }
axelar-rkyv-encoding.workspace = true

[dev-dependencies]
solana-program.workspace = true
solana-sdk.workspace = true
hex.workspace = true
solana-streamer = "2.0.1"
solana-test-validator = "2.0.1"
tempfile = "3"
serial_test = "3"
solana-logger = "2.0.1"
borsh.workspace = true
test-log.workspace = true

[build-dependencies]
serde_json.workspace = true
quote = "1"
proc-macro2 = "1"
