[package]
name = "mock-prover"
version = "0.1.0"
authors = ["tilacog <tilacog@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
serde.workspace = true
sha3.workspace = true
thiserror.workspace = true
serde_json.workspace = true
hex-literal.workspace = true
enum-display-derive.workspace = true

# axelar-amplifier contracts
connection-router.workspace = true
gateway.workspace = true

[dev-dependencies]
cw-multi-test = "0.17.0"
